# bbo

./: CMakeLists.txt  package.xml
configs/: cmaes.json  hoo.json  mse_optimization_task.json  simulated_annealing.json  sin_prod.json  sin_prod_4.json  sin_prod_5.json  sin_sum.json  sin_sum_10.json
examples/: bbo_example.cpp  test_cmaes_limits.cpp
include/rhoban_bbo/: cmaes_optimizer.h  composite_optimizer.h  cross_entropy.h  hoo.h  monte_carlo_optimizer.h  optimizer.h  optimizer_factory.h  partial_optimizer.h  simulated_annealing.h
include/rosban_bbo/: cmaes_optimizer.h  composite_optimizer.h  cross_entropy.h  monte_carlo_optimizer.h  optimizer.h  optimizer_factory.h  partial_optimizer.h  simulated_annealing.h
include/starkit_bbo/: cross_entropy.h  hoo.h  monte_carlo_optimizer.h  optimizer.h  optimizer_factory.h
src/: test_cmaes_limits.cpp
src/rhoban_bbo/: cmaes_optimizer.cpp  composite_optimizer.cpp  cross_entropy.cpp  hoo.cpp  monte_carlo_optimizer.cpp  optimizer.cpp  optimizer_factory.cpp  partial_optimizer.cpp  simulated_annealing.cpp  sources.cmake
src/rosban_bbo/: cmaes_optimizer.cpp  composite_optimizer.cpp  cross_entropy.cpp  monte_carlo_optimizer.cpp  optimizer.cpp  optimizer_factory.cpp  partial_optimizer.cpp  simulated_annealing.cpp  sources.cmake
src/starkit_bbo/: cmaes_optimizer.cpp  composite_optimizer.cpp  hoo.cpp  monte_carlo_optimizer.cpp  optimizer.cpp  optimizer_factory.cpp  partial_optimizer.cpp  sources.cmake
