<?xml version="1.0"?>
<package>
  <name>rosban_bbo</name>
  <version>0.0.0</version>
  <description>
    This package contains several blackbox optimizers and a factory allowing to
    build them from xml.
  </description>

  <maintainer email="medrimonia@gmail.com">medrimonia</maintainer>
  <author email="medrimonia@gmail.com">medrimonia</author>

  <license>NCY</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rhoban_utils</build_depend> <!-- rhobanproject/rhoban_utils.git -->
  <build_depend>libcmaes</build_depend> <!-- rhobandeps/libcmaes.git -->

  <run_depend>rhoban_utils</run_depend>
  <run_depend>libcmaes</run_depend>

  <export/>
</package>
