<?xml version="1.0"?>
<package>
  <name>rhoban_bbo</name>
  <version>0.0.0</version>
  <description>
    This package contains several blackbox optimizers and a factory allowing to
    build them from xml.
  </description>

  <maintainer email="medrimonia@gmail.com">medrimonia</maintainer>
  <author email="medrimonia@gmail.com">medrimonia</author>

  <license>NCY</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>starkit_utils</build_depend> <!-- StarkitRobots/utils.git -->
  <build_depend>starkit_random</build_depend> <!-- StarkitRobots/random.git -->
  <build_depend>libcmaes</build_depend> <!-- StarkitRobots/libcmaes.git -->

  <run_depend>starkit_utils</run_depend>
  <run_depend>starkit_random</run_depend>
  <run_depend>libcmaes</run_depend>

  <export/>
</package>
